webui-src/styles.css
/* ... */
table.attachment-container .attachment-header th:nth-child(5) {
  text-align: center;
  flex-basis: 10%
}

table.attachment-container .attachment {
  width: 100%;
  display: flex;
  justify-content: space-between;
  text-align: start
}

table.attachment-container .attachment__name {
  flex-basis: 45%;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis
}

table.attachment-container .attachment__name span {
  margin-left: 8px
}

table.attachment-container .attachment__from {
  flex-basis: 15%
}

table.attachment-container .attachment__size {
  flex-basis: 10%
}

table.attachment-container .attachment__date {
  flex-basis: 20%
}

table.attachment-container .attachment td:nth-child(5) {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-basis: 10%
}

table.attachment-container .attachment td:nth-child(5) button {
  font-size: .875rem
}

.view-toggle {
  height: max-content;
  border: 1px solid #019dff;
  border-radius: 4px;
  display: flex
}

.view-toggle * {
  padding: 4px 12px;
  border-radius: 4px
}

.composePopupOverlay {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: 1;
  background-color: rgba(0, 0, 0, .2)
}

.composePopupOverlay .composePopup {
  position: absolute;
  inset: 0;
  margin: auto;
  width: 80%;
  height: 90%
}

.composePopupOverlay .composePopup>.widget {
  padding: 2rem
}

.composePopupOverlay .composePopup .close-btn {
  position: absolute;
  top: 1.5rem;
  right: 1.5rem
}

.file-view {
  width: 100%;
  padding: 1rem;
  margin-top: 1.5rem;
  border-radius: 8px;
  border: 1px solid #ccc;
  animation: fadein .5s
}

.file-view__heading {
  display: flex;
  justify-content: space-between;
  margin-bottom: .5rem
}

.file-view__heading-chunk {
  display: flex;
  gap: 1rem
}

.file-view__body {
  display: flex;
  flex-direction: column;
  gap: 1rem
}

.file-view__body-details {
  display: flex;
  align-items: center
}

.file-view__body-details-stat {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(5, 1fr)
}

.file-view__body-details-stat span>i {
  margin-right: .5rem
}

.file-view__body-details-action {
  display: flex;
  gap: 1rem;
  height: 100%
}

.file-view__body-details-action button,
.file-view__body-details-action button.red {
  padding: .25rem .75rem
}

table.myfiles td {
  word-wrap: break-word
}

table.myfiles th:nth-child(1) {
  width: 2%
}

table.myfiles th:nth-child(2) {
  width: 50%
}

table.myfiles td:nth-child(2) {
  text-align: start
}

table.friendsfiles td {
  word-wrap: break-word
}

table.friendsfiles th:nth-child(1) {
  width: 2%
}

table.friendsfiles th:nth-child(2) {
  width: 50%
}

table.friendsfiles th:nth-child(4) {
  width: 40%
}

table.friendsfiles td:nth-child(2) {
  text-align: start
}

.file-search-container {
  margin-top: 1rem;
  padding: 8px;
  display: flex;
  gap: 8px;
  border: 1px solid rgba(20, 20, 27, .2);
  border-radius: 6px;
  height: 100%;
  overflow: auto
}

.file-search-container__keywords {
  flex-basis: 15%;
  padding-right: .25rem;
  border-right: 1px solid rgba(20, 20, 27, .1)
}

.file-search-container__keywords .keywords-container {
  display: flex;
  flex-direction: column;
  border-top: 2.5px solid rgba(20, 20, 27, .08);
  margin-top: .125rem;
  padding-top: .25rem
}

.file-search-container__keywords .keywords-container a {
  font-size: 1.2rem;
  text-decoration: none;
  color: #14141b
}

.file-search-container__keywords .keywords-container a.selected {
  color: #019dff
}

.file-search-container__results {
  flex-basis: 85%;
  height: 100%;
  overflow: auto
}

.file-search-container__results .results-container .results-header tr {
  display: flex
}

.file-search-container__results .results-container .results-header tr th {
  font-size: 1.25rem;
  font-weight: bold;
  text-align: left
}

.file-search-container__results .results-container .results-header tr th:nth-child(1) {
  flex-basis: 40%
}

.file-search-container__results .results-container .results-header tr th:nth-child(2) {
  flex-basis: 10%;
  text-align: center
}

.file-search-container__results .results-container .results-header tr th:nth-child(3) {
  flex-basis: 40%
}

.file-search-container__results .results-container .results-header tr th:nth-child(4) {
  flex-basis: 10%
}

.file-search-container__results .results-container .results {
  height: 100%;
  overflow: auto
}

.file-search-container__results .results-container .results tr {
  display: flex
}

.file-search-container__results .results-container .results tr .results__hash,
.file-search-container__results .results-container .results tr .results__name {
  text-align: left;
  flex-basis: 40%;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis
}

.file-search-container__results .results-container .results tr .results__hash span,
.file-search-container__results .results-container .results tr .results__name span {
  margin-left: 8px
}

.file-search-container__results .results-container .results tr .results__size {
  flex-basis: 10%
}

.file-search-container__results .results-container .results tr .results__download {
  flex-basis: 10%;
  display: flex;
  justify-content: start;
  align-items: center
}

.search-form {
  display: flex;
  width: 40%
}

.search-form input {
  width: 100%
}

.search-form button {
  margin-left: .5rem
}

.shareManagerPopupOverlay {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: 1;
  background-color: rgba(0, 0, 0, .2)
}

.shareManagerPopupOverlay .shareManagerPopup {
  position: absolute;
  inset: 0;
  margin: auto;
  width: 80%;
  height: 90%
}

.shareManagerPopupOverlay .shareManagerPopup>.widget {
  padding: 1.5rem
}

.shareManagerPopupOverlay .shareManagerPopup .close-btn {
  position: absolute;
  top: 1.5rem;
  right: 1.5rem
}

.share-manager {
  display: flex;
  flex-direction: column;
  justify-content: space-between
}

.share-manager__table {
  margin: 1rem 0 auto
}
/* ... */

